# LeLab

./: .gitignore  CMakeLists.txt  README.md
Docs/: stack.txt
cmake_modules/: FindASSIMP.cmake
dep/: CMakeLists.txt  PackageList.txt  install.txt
dep/assimp_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Assimp.sln  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  assimp.pc  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
dep/assimp_build/code/: INSTALL.vcxproj  INSTALL.vcxproj.filters  assimp.vcxproj  assimp.vcxproj.filters  cmake_install.cmake
dep/assimp_build/contrib/zlib/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  zlib.vcxproj  zlib.vcxproj.filters
dep/assimp_build/tools/assimp_cmd/: INSTALL.vcxproj  INSTALL.vcxproj.filters  assimp_cmd.vcxproj  assimp_cmd.vcxproj.filters  cmake_install.cmake
dep/assimp_build/tools/assimp_view/: INSTALL.vcxproj  INSTALL.vcxproj.filters  assimp_viewer.vcxproj  assimp_viewer.vcxproj.filters  cmake_install.cmake
dep/glew/include/: include - Shortcut.lnk
dep/glew/lib/: glew32.exp  glew32.lib  glew32d.exp  glew32d.lib  glew32s.lib  glew32sd.lib
dep/glfw/examples/: boing_debug.ilk  gears_debug.ilk  heightmap_debug.ilk  listmodes_debug.ilk  mipmaps_debug.ilk  mtbench_debug.ilk  mthello_debug.ilk  particles_debug.ilk  pong3d_debug.ilk  splitview_debug.ilk  triangle_debug.ilk  wave_debug.ilk
dep/glfw/tests/: accuracy_debug.ilk  defaults_debug.ilk  dynamic_debug.ilk  events_debug.ilk  fsaa_debug.ilk  fsinput_debug.ilk  iconify_debug.ilk  joysticks_debug.ilk  peter_debug.ilk  reopen_debug.ilk  tearing_debug.ilk  version_debug.ilk
dep/gtest_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  gtest.sln  gtest.vcxproj  gtest.vcxproj.filters  gtest_main.vcxproj  gtest_main.vcxproj.filters
dep/soil/projects/VC9/: SOIL.vcxproj  UpgradeLog.XML  UpgradeLog.htm
doc/: stack.txt
libs/: fmodapi375win_readme.txt
libs/assimp--2.0.863-sdk/code/: AssimpPCH.cpp  AssimpPCH.h  Importer.cpp
libs/assimp--2.0.863-sdk/code/res/: assimp.aps
libs/assimp--2.0.863-sdk/include/: aiVersion.h
libs/assimp--2.0.863-sdk/workspaces/vc9/: assimp.vcxproj  assimp.vcxproj.filters  assimp.vcxproj.orig
libs/assimp--2.0.863-sdk/workspaces/vc9/shared/: DllShared.props  FastSTL.props  LibShared.props  NoBoostShared.props  SingleThreadedShared.props
libs/devil-1.7.8/include/IL/: config.h
libs/devil-1.7.8/src-IL/msvc9/: IL.vcproj  IL.vcxproj  IL.vcxproj.filters
libs/devil-1.7.8/src-ILU/msvc9/: ILU.vcxproj  ILU.vcxproj.filters
libs/devil-1.7.8/src-ILUT/msvc9/: ILUT.vcxproj  ILUT.vcxproj.filters
libs/freeglut-2.8.0/VisualStudio/2010/: freeglut.vcxproj  freeglut.vcxproj.filters
libs/glfw-2.7.5/lib/: internal.h
libs/glfw-2.7.5/lib/win32/: win32_dllmain.c  win32_enable.c  win32_fullscreen.c  win32_glext.c  win32_init.c  win32_joystick.c  win32_thread.c  win32_time.c  win32_window.c
libs/glfw-2.7.5/support/msvc100/: GLFW.vcxproj
libs/soil/: SOIL.vcxproj  SOIL.vcxproj.filters
src/: CMakeLists.txt  LeLab.sln
src/LeClient/: Application.cpp  Application.h  CMakeLists.txt  LeClient.vcxproj  LeClient.vcxproj.filters  NetworkTask.cpp  NetworkTask.h  OpenGLTest.cpp  OpenGLTest.h  OpenGLTest2.cpp  OpenGLTest2.h  PolygonTest.cpp  PolygonTest.h  TcpClient.cpp  TcpClient.h  TestTask.h  main.cpp  settings.conf.dist
src/LeEngine/: Application.cpp  ByteBuffer.cpp  ByteBuffer.h  CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  DMath.h  Dator.h  Defines.h  File.cpp  File.h  Functor.h  GlobalTimer.cpp  GlobalTimer.h  IApplication.h  IProfilerOutputHandler.h  ITask.h  InputTask.cpp  InputTask.h  Kernel.cpp  Kernel.h  LeEngine.vcxproj  LeEngine.vcxproj.filters  LeEngine.vcxproj.filters.orig  LeEngine.vcxproj.orig  Lighting.cpp  Lighting.h  Line.cpp  Line.h  Log.cpp  Log.h  MMBlob.cpp  MMBlob.h  MMDynamicBlob.h  MMObject.cpp  MMObject.h  MMPointer.cpp  MMPointer.h  (+49 more)
src/LeServer/: CMakeLists.txt  LeServer.vcxproj  LeServer.vcxproj.filters  NetworkTask.cpp  NetworkTask.h  ServerApplication.cpp  ServerApplication.h  Session.cpp  Session.h  TcpServer.cpp  TcpServer.h  main.cpp
src/LeTests/: CMakeLists.txt  LeTests.vcxproj  LeTests.vcxproj.filters  gtest-all.cc  main.cpp  matrix_tests.cpp  vector_tests.cpp  vectortests.cpp
src/LeTests/gtest/: gtest.h
