option(USE_ASSIMP "Assimp" ON)
option(USE_GLEW "GLEW" ON)
option(USE_GLFW "glfw" ON)
option(USE_SOIL "SOIL" ON)
option(USE_GTEST "GTest" ON)

if(CMAKE_COMPILER_IS_GNUCXX)
    add_definitions(--no-warnings)
elseif(MSVC)
    add_definitions(/W0 /D_SCL_SECURE_NO_WARNINGS)
endif()

#if(USE_ASSIMP AND NOT ASSIMP_FOUND)
    #add_subdirectory(assimp)
    set(ASSIMP_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/dep/assimp/include CACHE PATH "")
    set(ASSIMP_LIBRARY ${PROJECT_SOURCE_DIR}/build/Debug/x64/assimpD.lib CACHE FILEPATH "")
    set(ASSIMP_INCLUDE_DIRS ASSIMP_INCLUDE_DIR)
    set(ASSIMP_LIBRARIES ASSIMP_LIBRARY)
    mark_as_advanced(ASSIMP_INCLUDE_DIR ASSIMP_LIBRARY)
#endif()

#if(USE_GLEW AND NOT GLEW_FOUND)
    #add_subdirectory(glew)
    set(GLEW_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/dep/glew/include CACHE PATH "")
    set(GLEW_LIBRARY ${PROJECT_SOURCE_DIR}/build/Debug/Win32/glew32sd.lib CACHE FILEPATH "")
    set(GLEW_INCLUDE_DIRS GLEW_INCLUDE_DIR)
    set(GLEW_LIBRARIES GLEW_LIBRARY)
    mark_as_advanced(GLEW_INCLUDE_DIR GLEW_LIBRARY)
#endif()

#if(USE_GLFW AND NOT GLFW_FOUND)
    #add_subdirectory(glfw)
    set(GLFW_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/dep/glfw/include CACHE PATH "")
    set(GLFW_LIBRARY ${PROJECT_SOURCE_DIR}/build/Debug/x64/glfw.lib CACHE FILEPATH "")
    set(GLFW_INCLUDE_DIRS GLFW_INCLUDE_DIR)
    set(GLFW_LIBRARIES GLFW_LIBRARY)
    mark_as_advanced(GLFW_INCLUDE_DIR GLFW_LIBRARY)
#endif()

#if(USE_SOIL AND NOT SOIL_FOUND)
    #add_subdirectory(soil)
    set(SOIL_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/dep/soil/include CACHE PATH "")
    set(SOIL_LIBRARY ${PROJECT_SOURCE_DIR}/build/Debug/x64/SOIL.lib CACHE FILEPATH "")
    set(SOIL_INCLUDE_DIRS SOIL_INCLUDE_DIR)
    set(SOIL_LIBRARIES SOIL_LIBRARY)
    mark_as_advanced(SOIL_INCLUDE_DIR SOIL_LIBRARY)
#endif()

#if(USE_GTEST AND NOT GTEST_FOUND)
    #add_subdirectory(gtest)
    set(GTEST_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/dep/gtest/include CACHE PATH "")
    set(GTEST_LIBRARY ${PROJECT_SOURCE_DIR}/build/Release/x64/gtest.lib CACHE FILEPATH "")
    set(GTEST_LIBRARY_DEBUG ${PROJECT_SOURCE_DIR}/build/Debug/x64/gtest.lib CACHE FILEPATH "")
    set(GTEST_MAIN_LIBRARY ${PROJECT_SOURCE_DIR}/build/Release/x64/gtest_main.lib CACHE FILEPATH "")
    set(GTEST_MAIN_LIBRARY_DEBUG ${PROJECT_SOURCE_DIR}/build/Debug/x64/gtest_main.lib CACHE FILEPATH "")
    set(GTEST_INCLUDE_DIRS GTEST_INCLUDE_DIR)
    set(GTEST_LIBRARIES GTEST_LIBRARY GTEST_LIBRARY_DEBUG GTEST_MAIN_LIBRARY GTEST_MAIN_LIBRARY_DEBUG)
    mark_as_advanced(GTEST_INCLUDE_DIR GTEST_LIBRARY GTEST_LIBRARY_DEBUG GTEST_MAIN_LIBRARY GTEST_MAIN_LIBRARY_DEBUG)
#endif()

# find_package(GLEW)
# find_package(GTest)
# find_package(glfw)
# find_package(assimp)
# find_package(soil)
